# restman

./: .gitignore  NOTES_RESUME.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: build-check.yml  release.yml
src/: App.tsx  monaco-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater-signing-key.private.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  error.rs  lib.rs  main.rs  runner.rs  secrets.rs  sync.rs  util.rs  vars.rs  workspace.rs
src-tauri/src/auth/: aws_sigv4.rs  mod.rs  oauth.rs
src-tauri/src/auth/oauth/: token_store.rs
src-tauri/src/codegen/: csharp.rs  curl.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  plugin.rs  python.rs  ruby.rs  rust.rs
src-tauri/src/commands/: backup.rs  codegen.rs  collections.rs  environments.rs  files.rs  graphql.rs  history.rs  http.rs  interop.rs  mock_servers.rs  mod.rs  oauth.rs  plugins.rs  requests.rs  scripting.rs  streaming.rs  sync.rs  tabs.rs  tags.rs  variables.rs  workspaces.rs
src-tauri/src/engine/: grpc.rs  http.rs  mock.rs  mod.rs  sse.rs  ws.rs
src-tauri/src/engine/grpc/: framing.rs  mod.rs  reflection.rs  schema.rs  testsupport.rs  transport.rs
src-tauri/src/interop/: bruno.rs  curl.rs  environment.rs  har.rs  http_file.rs  insomnia.rs  mod.rs  openapi.rs  plugin.rs  postman.rs  restman.rs
src-tauri/src/model/: auth.rs  collection.rs  environment.rs  grpc.rs  history.rs  http.rs  mock.rs  mod.rs  plugin.rs  request.rs  streaming.rs  tab.rs  tag.rs  variable.rs  workspace_settings.rs
src-tauri/src/plugins/: mod.rs  runtime.rs
src-tauri/src/scripting/: engine.rs  mod.rs  types.rs
src-tauri/src/store/: collections.rs  db.rs  environments.rs  history.rs  migrations.rs  mock_servers.rs  mod.rs  plugins.rs  requests.rs  tabs.rs  tags.rs  variables.rs  workspace_settings.rs  workspaces.rs
src-tauri/tests/fixtures/grpc/common/: shared.proto
src-tauri/tests/fixtures/grpc/importer/: main.proto
src/app/: AppShell.tsx  RequestPane.tsx  ResponsePanel.tsx  Sidebar.tsx  TopBar.tsx  useAppMenu.ts
src/components/: CodeEditor.tsx  LazyCodeEditor.tsx  ModalPortal.tsx  ResizeHandle.tsx  Switch.tsx  VariableSuggestInput.tsx  Watermark.tsx  WindowControls.tsx
src/features/collections/: CollectionAuthDialog.tsx  CollectionNode.test.tsx  CollectionNode.tsx  CollectionRunner.tsx  CollectionsPanel.tsx  ImportDialog.test.tsx  ImportDialog.tsx  RequestList.tsx  RequestRow.tsx  SearchResults.test.tsx  SearchResults.tsx  TagPicker.tsx  dragState.test.ts  dragState.ts  exportUtils.ts  highlight.test.ts  highlight.tsx  hooks.ts  runnerSampleData.test.ts  runnerSampleData.ts  tree.test.ts  tree.ts  useOpenRequest.ts
src/features/commands/: CommandPalette.test.tsx  CommandPalette.tsx
src/features/cookies/: CookieJarDialog.test.tsx  CookieJarDialog.tsx  hooks.ts
src/features/environments/: EnvironmentSwitcher.tsx  EnvironmentsPanel.tsx  VariablesEditor.tsx  hooks.ts
src/features/history/: HistoryDiffDialog.test.tsx  HistoryDiffDialog.tsx  HistoryPanel.tsx  hooks.ts
src/features/mocks/: MockServerManagerDialog.tsx  hooks.ts
src/features/plugins/: PluginManagerDialog.tsx  hooks.ts
src/features/request/: AuthConfigFields.tsx  BodyEditor.test.tsx  BodyEditor.tsx  CodeTab.test.tsx  CodeTab.tsx  GraphqlDocsExplorer.tsx  KeyValueEditor.tsx  LazyGraphqlDocsExplorer.tsx  RequestAuthTab.tsx  RequestBuilder.tsx  SaveRequestDialog.tsx  ScriptsTab.test.tsx  ScriptsTab.tsx  graphqlSchemaHooks.test.ts  graphqlSchemaHooks.ts  oauthHooks.test.ts  oauthHooks.ts  useSaveRequest.test.tsx  useSaveRequest.ts  useSend.ts
src/features/response/: ResponseViewer.tsx  SetVariableDialog.tsx  TestResultsPanel.test.tsx  TestResultsPanel.tsx  jsonPath.test.ts  jsonPath.ts
src/features/settings/: ExportImportSection.test.tsx  ExportImportSection.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  SettingsPanel.tsx
src/features/streaming/: GrpcMessageBuilder.test.tsx  GrpcMessageBuilder.tsx  GrpcPanel.test.tsx  GrpcPanel.tsx  GrpcSchemaPicker.test.tsx  GrpcSchemaPicker.tsx  SsePanel.test.tsx  SsePanel.tsx  WsPanel.test.tsx  WsPanel.tsx  grpcHooks.ts  grpcMessageIpc.ts  grpcSchemaIpc.ts  grpcSchemaTypes.ts  hooks.ts  wsHooks.ts
src/features/tabs/: TabsBar.tsx  hooks.test.tsx  hooks.ts  useTabSync.test.tsx  useTabSync.ts
src/features/tools/: Base64Tool.tsx  HashTool.tsx  HexTool.tsx  JsonTool.tsx  JwtTool.tsx  TimestampTool.tsx  ToolLayout.tsx  ToolsDialog.test.tsx  ToolsDialog.tsx  UrlTool.tsx  registry.ts
src/features/updates/: UpdateBanner.test.tsx  UpdateBanner.tsx  UpdateProgressBar.tsx  useUpdater.test.ts  useUpdater.ts
src/features/workspaces/: WorkspaceSettingsDialog.test.tsx  WorkspaceSettingsDialog.tsx  hooks.ts
src/hooks/: useTheme.ts
src/lib/: commands.test.ts  commands.ts  confirmDelete.ts  encoding.test.ts  encoding.ts  hash.test.ts  hash.ts  hex.test.ts  hex.ts  historyDiff.test.ts  historyDiff.ts  http.test.ts  http.ts  ipc.ts  jwt.test.ts  jwt.ts  liveSync.ts  methods.ts  monaco.ts  monacoVariableCompletion.ts  timestamp.test.ts  timestamp.ts  types.test.ts  types.ts  url.test.ts  url.ts  useDismissable.ts
src/stores/: requestStore.test.ts  requestStore.ts  streamingPanelStore.ts  uiStore.test.ts  uiStore.ts
src/styles/: global.css
src/test/: setup.ts
