[package]
name = "restman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "restman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "zstd", "multipart", "stream", "cookies", "system-proxy", "rustls-tls-native-roots"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
base64 = "0.22.1"
keyring = { version = "4.1.2", default-features = false, features = ["v1", "apple-native-keyring-store", "windows-native-keyring-store", "zbus-secret-service-keyring-store"] }
oauth2 = { version = "5.0.0", features = ["pkce-plain"] }
aws-sigv4 = "1.4.5"
aws-credential-types = "1.2.14"
reqwest_cookie_store = "0.9.0"
cookie_store = "0.22"
rquickjs = { version = "0.8.1", features = ["classes", "loader", "allocator", "macro", "bindgen"] }
jsonpath-rust = "0.7.4"
quick-xml = { version = "0.37.2", features = ["serialize"] }
jsonschema = "0.29.1"
csv = "1.3.1"
saphyr = "0.0.6"
rand = "0.9"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# --- gRPC dynamic client (Phase 6 task 4, 17d) ---
# `protox`/`prost-reflect`/`prost`/`prost-types` promoted from [dev-dependencies]
# (17c spike) to runtime deps now that 17d builds a real dynamic client.
protox = "0.9.1"
prost = "0.14.4"
prost-reflect = { version = "0.16.4", features = ["serde"] }
prost-types = "0.14.4"
# h2 + TLS stack for the hand-rolled gRPC client. reqwest (0.12) doesn't expose
# raw HTTP/2 trailers, which gRPC needs, so gRPC runs its own `h2` client.
# rustls (not native-tls) gives clean ALPN `h2` negotiation; both are already
# transitive deps of reqwest, so adding direct edges adds no new runtime TLS
# implementation. `_native_roots` variants load OS root certs into rustls so
# corporate-CA users keep working without a custom trust store config.
h2 = "0.4"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "0.26"
bytes = "1"
http = "1"
# Mock servers (Phase 7): axum is tokio-native, so it shares this crate's
# existing tokio runtime instead of pulling a second one. Confirmed via
# `cargo tree -p hyper`/`-p h2` before adding: axum 0.8's hyper 1.x is the
# exact same resolved version reqwest/gRPC already pull in — no duplicate
# TLS/HTTP stack. Minimal features: mock routes are matched against
# DB-stored rule patterns at runtime (not axum's typed path/query
# extractors), so only json/tokio/http1 are needed.
axum = { version = "0.8.9", default-features = false, features = ["json", "tokio", "http1"] }

[dev-dependencies]
url = "2"
# Self-signed cert generation for the loopback h2+TLS handshake test (offline
# proof of the transport chain, mirroring the WS KAT approach). Dev-only: never
# shipped. Mirrors the `tests/fixtures/grpc/` fixture convention introduced in 17c.
rcgen = "0.13"

